--- a/App/Voltflow/Views/MainView.axaml
+++ b/App/Voltflow/Views/MainView.axaml
@@ -1,32 +1,17 @@
-<UserControl xmlns="https://github.com/avaloniaui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:vm="clr-namespace:Voltflow.ViewModels"
-			 
-			 xmlns:mapsui="clr-namespace:Mapsui.UI.Avalonia;assembly=Mapsui.UI.Avalonia"
-			 xmlns:avalonia="clr-namespace:Mapsui.UI.Avalonia;assembly=Mapsui.UI.Avalonia"
-			 
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="Voltflow.Views.MainView"
-             x:DataType="vm:MainViewModel">
-  <Design.DataContext>
-    <vm:MainViewModel />
-  </Design.DataContext>
-
-	<DockPanel>
-		<Panel DockPanel.Dock="Top" HorizontalAlignment="Stretch" Height="100" Background="Green">
-			<Button Command="{Binding EmailTest}">
-				email test
-			</Button>
-			<StackPanel HorizontalAlignment="Right">
-				<Label>Lon</Label>				
-				<TextBlock Text="{Binding Lon}"/>				
-				<Label>Lat</Label>				
-				<TextBlock Text="{Binding Lat}"/>
-				<TextBlock Text="{Binding IsHit}"/>
-			</StackPanel>
-		</Panel>
-        <mapsui:MapControl x:Name="map"/>
-	</DockPanel>
+<UserControl
+    x:Class="Voltflow.Views.MainView"
+    xmlns="https://github.com/avaloniaui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controllers="clr-namespace:Voltflow.Controllers"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:reactiveUi="http://reactiveui.net"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
+    <reactiveUi:RoutedViewHost Router="{Binding Router}">
+        <reactiveUi:RoutedViewHost.ViewLocator>
+            <controllers:AppViewController />
+        </reactiveUi:RoutedViewHost.ViewLocator>
+    </reactiveUi:RoutedViewHost>
 </UserControl>
