--- a/App/Voltflow/Views/MainWindow.axaml
+++ b/App/Voltflow/Views/MainWindow.axaml
@@ -2,16 +2,19 @@
     x:Class="Voltflow.Views.MainWindow"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:controllers="clr-namespace:Voltflow.Controllers"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:reactiveUi="http://reactiveui.net"
     xmlns:views="clr-namespace:Voltflow.Views"
-    xmlns:vm="using:Voltflow.ViewModels"
     Title="Voltflow"
     d:DesignHeight="450"
     d:DesignWidth="800"
     Icon="/Assets/avalonia-logo.ico"
     mc:Ignorable="d">
+    <Window.Styles>
+        <StyleInclude Source="/Styles/ButtonStyle.axaml" />
+        <StyleInclude Source="/Styles/SeparatorStyle.axaml" />
+        <StyleInclude Source="/Styles/TextBlockStyle.axaml" />
+    </Window.Styles>
+
     <views:MainView />
 </Window>
