--- a/App/Voltflow/Views/NavBarView.axaml
+++ b/App/Voltflow/Views/NavBarView.axaml
@@ -1,5 +1,5 @@
 <UserControl
-    x:Class="Voltflow.Views.LoginView"
+    x:Class="Voltflow.Views.NavBarView"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -9,10 +9,16 @@
     d:DesignWidth="800"
     mc:Ignorable="d">
     <Design.DataContext>
-        <viewModels:LoginViewModel />
+        <viewModels:MainViewModel />
     </Design.DataContext>
-    <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-        <TextBlock>Login page WIP</TextBlock>
-        <Button Command="{Binding NavigateBack}">Go back</Button>
+
+    <StackPanel
+        Margin="8"
+        HorizontalAlignment="Right"
+        VerticalAlignment="Center"
+        Orientation="Horizontal">
+        <Button Command="{Binding RouteToLogin}">
+            Log In
+        </Button>
     </StackPanel>
 </UserControl>
