--- a/App/Voltflow/Views/TestView.axaml
+++ b/App/Voltflow/Views/TestView.axaml
@@ -13,29 +13,5 @@
         <viewModels:TestViewModel />
     </Design.DataContext>
 
-    <DockPanel>
-        <Panel
-            Height="100"
-            HorizontalAlignment="Stretch"
-            Background="Green"
-            DockPanel.Dock="Top">
-            <StackPanel HorizontalAlignment="Left">
-                <Button Command="{Binding EmailTest}">
-                    email test
-                </Button>
-                <Button Command="{Binding RouteToLogin}">
-                    Login
-                </Button>
-            </StackPanel>
-
-            <StackPanel HorizontalAlignment="Right">
-                <Label>Lon</Label>
-                <TextBlock Text="{Binding Lon}" />
-                <Label>Lat</Label>
-                <TextBlock Text="{Binding Lat}" />
-                <TextBlock Text="{Binding IsHit}" />
-            </StackPanel>
-        </Panel>
-        <mapsui:MapControl x:Name="map" />
-    </DockPanel>
+    <mapsui:MapControl x:Name="MapControl" />
 </UserControl>
