--- a/App/Voltflow/Styles/ButtonStyle.axaml
+++ b/App/Voltflow/Styles/ButtonStyle.axaml
@@ -1,17 +1,23 @@
 <Styles xmlns="https://github.com/avaloniaui" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style Selector="Button">
         <Setter Property="CornerRadius" Value="4" />
+        <Setter Property="Background" Value="White" />
+        <Setter Property="Foreground" Value="Black" />
+        <Setter Property="FontWeight" Value="Bold" />
     </Style>
 
-    <Style Selector="Button.green">
+    <Style Selector="Button:pointerover /template/ ContentPresenter">
+        <Setter Property="Background" Value="LightGray" />
+        <Setter Property="Foreground" Value="Black" />
+    </Style>
+
+    <Style Selector="Button.color-green">
         <Setter Property="Background" Value="Green" />
+        <Setter Property="Foreground" Value="White" />
     </Style>
 
-    <Style Selector="Button.green:pointerover /template/ ContentPresenter">
+    <Style Selector="Button.color-green:pointerover /template/ ContentPresenter">
         <Setter Property="Background" Value="DarkGreen" />
-    </Style>
-
-    <Style Selector="Button.green:pressed /template/ ContentPresenter">
-        <Setter Property="Background" Value="Green" />
+        <Setter Property="Foreground" Value="White" />
     </Style>
 </Styles>
