--- a/App/Voltflow/Styles/TextBlockStyle.axaml
+++ b/App/Voltflow/Styles/TextBlockStyle.axaml
@@ -1,17 +1,42 @@
 <Styles xmlns="https://github.com/avaloniaui" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style Selector="TextBlock.sm">
+    <Style Selector="TextBlock.size-xs">
+        <Setter Property="FontSize" Value="10" />
+    </Style>
+
+    <Style Selector="TextBlock.size-sm">
         <Setter Property="FontSize" Value="12" />
     </Style>
 
-    <Style Selector="TextBlock.l">
+    <Style Selector="TextBlock.size-md">
+        <Setter Property="FontSize" Value="14" />
+    </Style>
+
+    <Style Selector="TextBlock.size-l">
         <Setter Property="FontSize" Value="16" />
     </Style>
 
-    <Style Selector="TextBlock.xl">
+    <Style Selector="TextBlock.size-xl">
         <Setter Property="FontSize" Value="18" />
     </Style>
 
-    <Style Selector="TextBlock.bold">
+    <Style Selector="TextBlock.weight-bold">
         <Setter Property="FontWeight" Value="Bold" />
+    </Style>
+
+    <Style Selector="TextBlock.color-gray">
+        <Setter Property="Foreground" Value="Gray" />
+    </Style>
+
+    <Style Selector="TextBlock.color-lightgray">
+        <Setter Property="Foreground" Value="LightGray" />
+    </Style>
+
+    <Style Selector="TextBlock.hyperlink">
+        <Setter Property="Foreground" Value="LightSkyBlue" />
+        <Setter Property="FontWeight" Value="Bold" />
+    </Style>
+
+    <Style Selector="TextBlock.hyperlink:pointerover /template/ ContentPresenter">
+        <Setter Property="Background" Value="DarkGreen" />
     </Style>
 </Styles>
