--- a/App/Voltflow/Views/AuthView.axaml
+++ b/App/Voltflow/Views/AuthView.axaml
@@ -5,6 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewModels="clr-namespace:Voltflow.ViewModels"
+    xmlns:views="clr-namespace:Voltflow.Views"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
@@ -16,49 +17,9 @@
         MaxWidth="256"
         HorizontalAlignment="Stretch"
         VerticalAlignment="Center"
-        Spacing="8">
-        <TextBlock Classes="size-sm color-gray weight-bold" Text="E-Mail" />
-        <TextBox />
-
-        <TextBlock Classes="size-sm color-gray weight-bold" Text="Password" />
-        <TextBox PasswordChar="*" />
-
-        <Separator />
-
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="4" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-
-            <Button
-                Grid.Column="0"
-                HorizontalAlignment="Stretch"
-                HorizontalContentAlignment="Center"
-                Command="{Binding NavigateBack}">
-                Go Back
-            </Button>
-
-            <Button
-                Grid.Column="2"
-                HorizontalAlignment="Stretch"
-                HorizontalContentAlignment="Center"
-                Classes="color-green">
-                Log In
-            </Button>
-        </Grid>
-
-        <StackPanel
-            Margin="0,16,0,0"
-            HorizontalAlignment="Center"
-            Orientation="Horizontal"
-            Spacing="4">
-            <TextBlock Classes="size-sm" Text="Don't have an account?" />
-            <TextBlock
-                Classes="size-sm hyperlink"
-                Text="Sign up here!"
-                TextDecorations="Underline" />
-        </StackPanel>
+        Classes="no-spacing">
+        <views:SignUpFormView />
+        <views:SignInFormView />
+        <views:TwoFactorAuthView />
     </StackPanel>
 </UserControl>
