Add view locators

--- a/App/Voltflow/App.axaml
+++ b/App/Voltflow/App.axaml
@@ -2,9 +2,14 @@
     x:Class="Voltflow.App"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:viewLocators="clr-namespace:Voltflow.ViewLocators"
+	
     RequestedThemeVariant="Default">
-    <!--  "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options.  -->
 
+	<Application.DataTemplates>
+		<viewLocators:AvaloniaViewLocator/>
+	</Application.DataTemplates>
+	
     <Application.Styles>
         <FluentTheme />
         <StyleInclude Source="avares://IconPacks.Avalonia/Icons.axaml" />
