--- a/App/Voltflow/Views/SignInFormView.axaml
+++ b/App/Voltflow/Views/SignInFormView.axaml
@@ -18,7 +18,7 @@
         <models:AuthTypeConverter x:Key="AuthTypeConverter" />
     </UserControl.Resources>
 
-    <StackPanel x:Name="SignInForm" IsVisible="{Binding AuthType, Converter={StaticResource AuthTypeConverter}, ConverterParameter=SignIn}">
+    <StackPanel IsVisible="{Binding AuthType, Converter={StaticResource AuthTypeConverter}, ConverterParameter=SignIn}">
         <StackPanel Classes="sm-spacing" Orientation="Horizontal">
             <iconPacks:PackIconBootstrapIcons
                 VerticalAlignment="Center"
@@ -27,7 +27,10 @@
                 Kind="EnvelopeFill" />
             <TextBlock Classes="size-sm color-gray weight-bold" Text="Email" />
         </StackPanel>
-        <TextBox IsEnabled="{Binding !Authenticating}" Watermark="example@gmail.com" />
+        <TextBox
+            IsEnabled="{Binding !Authenticating}"
+            Text="{Binding SignInForm.Email}"
+            Watermark="example@gmail.com" />
 
         <StackPanel Classes="sm-spacing" Orientation="Horizontal">
             <iconPacks:PackIconBootstrapIcons
@@ -35,13 +38,38 @@
                 Classes="size-sm color-gray"
                 IsVisible="True"
                 Kind="ShieldLockFill" />
-
             <TextBlock Classes="size-sm color-gray weight-bold" Text="Password" />
         </StackPanel>
-        <TextBox
-            IsEnabled="{Binding !Authenticating}"
-            PasswordChar="*"
-            Watermark="ExamplePassword123" />
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="4" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+
+            <TextBox
+                Grid.Column="0"
+                IsEnabled="{Binding !Authenticating}"
+                MaxLength="32"
+                PasswordChar="*"
+                RevealPassword="{Binding ShowPassword}"
+                Text="{Binding SignInForm.Password}"
+                Watermark="Example123@" />
+
+            <Button Grid.Column="2" Command="{Binding RevealPassword}">
+                <StackPanel>
+                    <iconPacks:PackIconBootstrapIcons
+                        VerticalAlignment="Center"
+                        IsVisible="{Binding !ShowPassword}"
+                        Kind="EyeFill" />
+
+                    <iconPacks:PackIconBootstrapIcons
+                        VerticalAlignment="Center"
+                        IsVisible="{Binding ShowPassword}"
+                        Kind="EyeSlashFill" />
+                </StackPanel>
+            </Button>
+        </Grid>
 
         <Separator />
 
@@ -73,7 +101,7 @@
                 HorizontalAlignment="Stretch"
                 HorizontalContentAlignment="Center"
                 Classes="color-green"
-                Command="{Binding TestAuthentication}"
+                Command="{Binding ValidateSignIn}"
                 IsEnabled="{Binding !Authenticating}">
                 <StackPanel Orientation="Horizontal">
                     <iconPacks:PackIconBootstrapIcons
