--- a/App/Voltflow/Styles/SeparatorStyle.axaml
+++ b/App/Voltflow/Styles/SeparatorStyle.axaml
@@ -1,4 +1,5 @@
 <Styles xmlns="https://github.com/avaloniaui" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <!--  Default Separator style  -->
     <Style Selector="Separator">
         <Setter Property="Margin" Value="0,4" />
     </Style>
