--- a/App/Voltflow/Views/MainWindow.axaml
+++ b/App/Voltflow/Views/MainWindow.axaml
@@ -10,5 +10,6 @@
     d:DesignWidth="800"
     Icon="/Assets/avalonia-logo.ico"
     mc:Ignorable="d">
+    <!--  MainWindow is only used in Desktop/Mobile app. Browser app uses "SingleView" ApplicationLifetime.  -->
     <views:MainView />
 </Window>
