--- a/App/Voltflow/Views/SignInFormView.axaml
+++ b/App/Voltflow/Views/SignInFormView.axaml
@@ -15,10 +15,13 @@
     </Design.DataContext>
 
     <UserControl.Resources>
+        <!--  AuthTypeConverter returns whether AuthType set in AuthViewModel is the same as here, which is AuthType.SignIn.  -->
         <models:AuthTypeConverter x:Key="AuthTypeConverter" />
     </UserControl.Resources>
 
+    <!--  Form  -->
     <StackPanel IsVisible="{Binding AuthType, Converter={StaticResource AuthTypeConverter}, ConverterParameter=SignIn}">
+        <!--  Email input  -->
         <StackPanel Classes="sm-spacing" Orientation="Horizontal">
             <iconPacks:PackIconBootstrapIcons
                 VerticalAlignment="Center"
@@ -32,6 +35,7 @@
             Text="{Binding SignInForm.Email}"
             Watermark="example@gmail.com" />
 
+        <!--  Password input  -->
         <StackPanel Classes="sm-spacing" Orientation="Horizontal">
             <iconPacks:PackIconBootstrapIcons
                 VerticalAlignment="Center"
@@ -73,6 +77,7 @@
 
         <Separator />
 
+        <!--  Buttons  -->
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
@@ -114,6 +119,7 @@
             </Button>
         </Grid>
 
+        <!--  Hyperlink which hides this form and shows SignUp form.  -->
         <StackPanel
             Margin="0,16,0,0"
             HorizontalAlignment="Center"
